[US-5] Change Password #85 fixed h3 spacing

--- a/frontend/src/Assets/css/Settings.css
+++ b/frontend/src/Assets/css/Settings.css
@@ -3,8 +3,8 @@ h1 {
 }
 
 h3 {
-    padding-top: 20px;
-    padding-bottom: 10px;
+    padding-top: 15px;
+    padding-bottom: 20px;
 }
 
 .changePasswordForm {
